--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,10 +13,10 @@
     <p>混雑予想</p>
     <p>現在の混雑状況を教えてください。</p>
     <form method="post">
-        <input type="radio" name="state" value="1" required>閑散
-        <input type="radio" name="state" value="2" required>普通
-        <input type="radio" name="state" value="3" required>混雑
-        <input type="submit" value="vote" onclick="appreciate()">
+        <input type="radio" name="state" value="1"> 空いてる
+        <input type="radio" name="state" value="2"> 普通
+        <input type="radio" name="state" value="3"> 混んでる
+        <input type="submit" value="投票">
     </form>
     <hr>
     <footer>
