--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>食堂混雑予想</title>
-    <script src="static/index.js"></script>
 </head>
 
 <body>
@@ -13,9 +12,9 @@
     <p>混雑予想</p>
     <p>現在の混雑状況を教えてください。</p>
     <form method="post">
-        <input type="radio" name="state" value="1"> 空いてる
-        <input type="radio" name="state" value="2"> 普通
-        <input type="radio" name="state" value="3"> 混んでる
+        <input type="radio" name="state" value="1" required> 空いてる
+        <input type="radio" name="state" value="2" required> 普通
+        <input type="radio" name="state" value="3" required> 混んでる
         <input type="submit" value="投票">
     </form>
     <hr>
