--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,12 @@
 
 <body>
     <h1>食堂混雑</h1>
-    <p>現在の混雑状況（直近 n 分）</p>
+    <h3>現在の混雑状況</h3>
+    {% if avg == None%}
+        <p>直近10分のデータがありません。</p>
+    {% else %}
+        <p>現在の混雑状況（直近10分の平均）：{{ avg }}</p>
+    {% endif %}
     <p>混雑予想</p>
     <p>現在の混雑状況を教えてください。</p>
     <form method="post">
