--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,11 +15,9 @@
     <h3>混雑予想（直近の投稿に基づく）</h3>
     <p>{{ trend }}</p>
     <br>
-    <!--
     <h3>混雑予想（過去の同曜日の投稿に基づく）</h3>
-    <p></p>
+    <p>{{ hysteresis }}</p>
     <br>
-    -->
     <h3>現在の混雑状況を教えてください。</h3>
     <form method="post">
         <input type="radio" name="state" value="1" required> 空いてる
